methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:29: error: not found: value Ligne
  Ligne()
  ^